--- a/_qt_creator/login_app2/from_to_create_account.ui
+++ b/_qt_creator/login_app2/from_to_create_account.ui
@@ -51,14 +51,14 @@
 color: rgb(255, 85, 255);</string>
    </property>
    <property name="text">
-    <string>L o g i n</string>
+    <string>Sign up</string>
    </property>
   </widget>
   <widget class="QPushButton" name="btn_login">
    <property name="geometry">
     <rect>
-     <x>330</x>
-     <y>420</y>
+     <x>340</x>
+     <y>490</y>
      <width>131</width>
      <height>61</height>
     </rect>
@@ -76,7 +76,7 @@ color: rgb(255, 85, 255);</string>
 	background-color: rgb(66, 0, 99);
 	color: white;
 	padding: 10px;
-	
+	box-shadow: 12px 12px 15px rgba(155, 155, 155, 0.8);
 }
 
 
@@ -85,7 +85,7 @@ QPushButton:pressed {
 }</string>
    </property>
    <property name="text">
-    <string>Login</string>
+    <string>Sign up</string>
    </property>
   </widget>
   <widget class="QWidget" name="verticalLayoutWidget">
@@ -94,10 +94,10 @@ QPushButton:pressed {
      <x>10</x>
      <y>130</y>
      <width>481</width>
-     <height>241</height>
+     <height>311</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout" stretch="5,5">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="5,5,5">
     <property name="spacing">
      <number>10</number>
     </property>
@@ -115,6 +115,18 @@ QPushButton:pressed {
     </property>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="leftMargin">
+       <number>3</number>
+      </property>
+      <property name="topMargin">
+       <number>3</number>
+      </property>
+      <property name="rightMargin">
+       <number>3</number>
+      </property>
+      <property name="bottomMargin">
+       <number>3</number>
+      </property>
       <item>
        <widget class="QLabel" name="label_2">
         <property name="styleSheet">
@@ -123,6 +135,9 @@ font-size: 25px;</string>
         </property>
         <property name="text">
          <string>Email</string>
+        </property>
+        <property name="margin">
+         <number>5</number>
         </property>
        </widget>
       </item>
@@ -141,6 +156,18 @@ font-size: 25px;</string>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <property name="leftMargin">
+       <number>3</number>
+      </property>
+      <property name="topMargin">
+       <number>3</number>
+      </property>
+      <property name="rightMargin">
+       <number>3</number>
+      </property>
+      <property name="bottomMargin">
+       <number>3</number>
+      </property>
       <item>
        <widget class="QLabel" name="label_3">
         <property name="styleSheet">
@@ -150,10 +177,55 @@ font-size: 25px;</string>
         <property name="text">
          <string>Password</string>
         </property>
+        <property name="margin">
+         <number>5</number>
+        </property>
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="led_password">
+       <widget class="QLineEdit" name="led_pass">
+        <property name="styleSheet">
+         <string notr="true">color: rgb(255, 225, 189);
+font-size: 25px;
+</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <property name="leftMargin">
+       <number>3</number>
+      </property>
+      <property name="topMargin">
+       <number>3</number>
+      </property>
+      <property name="rightMargin">
+       <number>3</number>
+      </property>
+      <property name="bottomMargin">
+       <number>3</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="label_4">
+        <property name="styleSheet">
+         <string notr="true">color: rgb(255, 225, 189);
+font-size: 25px;</string>
+        </property>
+        <property name="text">
+         <string>Confirm Pass</string>
+        </property>
+        <property name="margin">
+         <number>5</number>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="led_confirm_pass">
         <property name="styleSheet">
          <string notr="true">color: rgb(255, 225, 189);
 font-size: 25px;
@@ -167,58 +239,6 @@ font-size: 25px;
      </layout>
     </item>
    </layout>
-  </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>480</y>
-     <width>171</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>11</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Don't have an accouint?</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btn_create_account">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>510</y>
-     <width>191</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Ravie</family>
-     <pointsize>-1</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton{
-	font-size: 15px;
-	border-radius: 10px;
-	background-color: rgb(23, 125, 136);
-	color: white;
-	padding: 10px;
-
-}
-
-
-QPushButton:pressed {
-	background-color: rgb(34, 177, 32);
-}</string>
-   </property>
-   <property name="text">
-    <string>Create Account</string>
-   </property>
   </widget>
  </widget>
  <resources/>
